--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,8 @@
 PORT=7000
 
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=NestBlog
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
 
-PRIVATE_KEY=test_secret_key
